chore: Setup Cargo deny
This checks the Rust dependencies for security vulnerabilities and
license issues. We can run it locally and it will run in CI.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,13 +42,12 @@ jobs:
             ~/.cargo/git
             target
           key: ${{ runner.os }}-cargo-test-${{ hashFiles('**/Cargo.lock') }}
- 
+
       - name: Install uv
         uses: astral-sh/setup-uv@v5
         with:
           version: "0.7.5"
           enable-cache: true
-          working-directory: sdks/python
 
       - name: Set up Python
         run: uv python install
@@ -64,7 +63,8 @@ jobs:
       - name: Lint (clippy)
         run: cargo clippy
 
-  fmt:
+  rustfmt:
+    name: Rust Format
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -75,7 +75,8 @@ jobs:
     - name: Format
       run: cargo fmt --check
 
-  detect-unused-dependencies:
+  rust-unused-dependencies:
+    name: Rust Unused Dependencies
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -90,3 +91,10 @@ jobs:
         with:
           command: machete
           args: --with-metadata
+
+  rust-cargo-deny:
+    name: Rust Cargo Deny
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+      - uses: EmbarkStudios/cargo-deny-action@v2
