--- a/crates/stepflow-state-sql/Cargo.toml
+++ b/crates/stepflow-state-sql/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "stepflow-state-sql"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
+publish = false
 description = "SQL-based StateStore implementation for StepFlow"
 
 [lib]
